# gcp-cert-tutor

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-02-15-gcp-ace-tutor-design.md  2026-02-15-gcp-ace-tutor-implementation.md  2026-02-18-session-exit-resume-design.md  2026-02-18-session-exit-resume-plan.md
src/gcp_tutor/: __init__.py  __main__.py  app.py  dashboard.py  db.py  flashcards.py  importer.py  models.py  quiz.py  review.py  seed.py  sm2.py  study.py
src/gcp_tutor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gcp_tutor/content/: domains.json  flashcards.json  questions.json  reading.json
tests/: conftest.py  test_app.py  test_dashboard.py  test_db.py  test_flashcards.py  test_importer.py  test_integration.py  test_models.py  test_quiz.py  test_review.py  test_seed.py  test_sm2.py  test_study.py
