[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gcp-tutor"
version = "0.1.0"
description = "GCP Associate Cloud Engineer certification prep tool"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.0.0",
    "markdown>=3.5.0",
    "pyyaml>=6.0.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
gcp-tutor = "gcp_tutor.app:main"

[tool.setuptools.packages.find]
where = ["src"]
